--- a/src/view/ThanhPhan/HoaDonJpanel.form
+++ b/src/view/ThanhPhan/HoaDonJpanel.form
@@ -123,10 +123,11 @@
         <Component class="javax.swing.JComboBox" name="cbbTT">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="ALL"/>
+              <StringArray count="4">
+                <StringItem index="0" value="Ch&#x1b0;a thanh to&#xe1;n"/>
                 <StringItem index="1" value="&#x110;&#xe3; thanh to&#xe1;n"/>
-                <StringItem index="2" value="Ch&#x1b0;a thanh to&#xe1;n"/>
+                <StringItem index="2" value="&#x110;&#xe3; h&#x1ee7;y"/>
+                <StringItem index="3" value="ALL"/>
               </StringArray>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
