--- a/src/view/ThanhPhan/NhanVienJpanel.form
+++ b/src/view/ThanhPhan/NhanVienJpanel.form
@@ -220,11 +220,11 @@
                               <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                               <Component id="btnUpAnhNV" min="-2" pref="101" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="206" max="-2" attributes="0"/>
-                              <Component id="btnThem" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnThem" linkSize="2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
-                              <Component id="btnSua" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnSua" linkSize="2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
-                              <Component id="btnClear" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnClear" linkSize="2" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="390" max="32767" attributes="0"/>
@@ -310,9 +310,9 @@
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="btnThem" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnSua" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnClear" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btnThem" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btnSua" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btnClear" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                           </Group>
